index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>Analyse-Tool für Transkript & Anmoderation</h1>
+  <h1>Analyse-Tool für Transkript & Anmoderation 002</h1>
 
   <label for="beitragstitel">Beitragstitel:</label>
   <input type="text" id="beitragstitel" placeholder="z. B. Sanierung des Großherzoglichen Palais" />
