index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h1>Analyse-Tool mit vollständigem XML-Ausgabeformat</h1>
+  <h1>Analyse-Tool mit vollständigem XML-Ausgabeformat 003</h1>
 
   <label for="beitragstitel">Beitragstitel:</label>
   <input type="text" id="beitragstitel" placeholder="z. B. Sanierung des Großherzoglichen Palais" />
