index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h1>Analyse-Tool mit strukturierter Vorschau-Ausgabe</h1>
+  <h1>Analyse-Tool mit strukturierter Vorschau-Ausgabe 004</h1>
 
   <label for="beitragstitel">Beitragstitel:</label>
   <input type="text" id="beitragstitel" placeholder="z. B. Sanierung des Großherzoglichen Palais" />
