index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -189,15 +189,6 @@ Denkmalschutz, Architektur, Regionalgeschichte, Tourismus, Hotelentwicklung`;
         </elemente>
       </aufgabe>
       <aufgabe>
-        <ziel>Erstellung redaktioneller Online-Elemente</ziel>
-        <elemente>
-          <ueberschrift max-laenge="60" />
-          <kurzbeschreibung max-laenge="150" />
-          <keywords max="10" />
-          <themen max="5" />
-        </elemente>
-      </aufgabe>
-      <aufgabe>
         <ziel>Doppelte Vorschauausgabe</ziel>
         <formate>
           <format typ="text">Mit Zwischenüberschriften</format>
@@ -213,7 +204,7 @@ Denkmalschutz, Architektur, Regionalgeschichte, Tourismus, Hotelentwicklung`;
   </anweisung-fuer-ki>
 
   <quelle>
-    <id>beitrag-${timestamp}</id>
+    <id>beitrag</id>
     <zeitstempel>${isoTime}</zeitstempel>
     <slug-id>${slug}</slug-id>
     <art>TV-Beitrag</art>
